[package]
name = "naia_bevy_npa"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "NPA (Namako Plan Adapter) for Naia Bevy adapter BDD tests"

[[bin]]
name = "naia_bevy_npa"
path = "src/main.rs"

[dependencies]
namako_engine = { path = "../../../namako/engine", features = ["npap", "macros"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
regex = "1.0"

naia-bevy-server = { path = "../../adapters/bevy/server", features = ["transport_local"] }
naia-bevy-client = { path = "../../adapters/bevy/client", features = ["transport_local"] }
naia-bevy-shared = { path = "../../adapters/bevy/shared" }
naia-server = { path = "../../server", features = ["transport_local"] }
naia-client = { path = "../../client", features = ["transport_local"] }
naia-shared = { path = "../../shared", features = ["transport_local"] }

bevy_app = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
bevy_tasks = { version = "0.18", default-features = false }

naia-test-harness = { path = "../harness" }
parking_lot = "0.12"
