[package]
name = "naia-test-harness"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
description = "Test harness for Naia - Scenario-based testing with local transport"

[features]
e2e_debug = [
  "naia-client/e2e_debug",
  "naia-server/e2e_debug",
  "naia-shared/e2e_debug"
]
test_utils = []

[dependencies]
naia-server = { path = "../../server", features = ["transport_local", "interior_visibility", "test_time", "bevy_support", "test_utils"] }
naia-client = { path = "../../client", features = ["transport_local", "interior_visibility", "test_time", "bevy_support"] }
naia-shared = { path = "../../shared", features = ["transport_local", "interior_visibility", "test_time", "bevy_support", "test_utils"] }

naia-demo-world = { path = "../../demos/demo_utils/demo_world" }

bevy_ecs = { version = "0.18", default-features = false }
parking_lot = "0.12"

log = "0.4"

# ----------------------------------------------------------------------
# Integration-only contract carve-out (Phase E close-out 2026-05-06).
# These five files retain Rust integration tests for areas where
# either (a) known product gaps exist (8 currently-failing tests), or
# (b) `#[ignore]` placeholders document infrastructure not yet built
# (5 ignored tests). All other legacy contract files were deleted —
# their behaviour is fully covered by namako Scenarios in
# `test/specs/features/`. See `contract_tests/integration_only/README.md`.
# ----------------------------------------------------------------------
[[test]]
name = "integration_only_00_common"
path = "contract_tests/integration_only/00_common.rs"

[[test]]
name = "integration_only_01_connection_lifecycle"
path = "contract_tests/integration_only/01_connection_lifecycle.rs"

[[test]]
name = "integration_only_03_messaging"
path = "contract_tests/integration_only/03_messaging.rs"

[[test]]
name = "integration_only_06_entity_scopes"
path = "contract_tests/integration_only/06_entity_scopes.rs"

[[test]]
name = "integration_only_09_entity_ownership"
path = "contract_tests/integration_only/09_entity_ownership.rs"

[[test]]
name = "integration_only_10_entity_delegation"
path = "contract_tests/integration_only/10_entity_delegation.rs"
